--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+
 }
+
 
 .destacados {
     background-size: contain;
@@ -60,3 +62,7 @@
         border-color: transparent;
 }
 
+
+.texto-gigante {
+    font-size: 40px;
+}
